# music_metadata_tool

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.json  docker-compose.yml  pyproject.toml
.codex/: AGENTS.md
.codex/prompts/: sdd-change-apply.md  sdd-change-archive.md  sdd-change-init.md  sdd-design.md  sdd-implement.md  sdd-requirements.md  sdd-steering.md  sdd-tasks.md  sdd-validate.md
.codex/workflows/spec-from-source/: 00_master.md  01_rules.md  02_planning.md  03_code-analysis.md  04_csv-writing.md  05_verification.md  06_checklist.md
.github/workflows/: ci.yml
docs/reverse-spec/: README.md  feature-inventory.csv  user-spec.md
lib/: README.md
lib/music_metadata_lib/: cli.ts
lib/music_metadata_lib/application/: apply.py  scan.py
lib/music_metadata_lib/cli/: __init__.py
lib/music_metadata_lib/domain/: constants.py
lib/music_metadata_lib/infrastructure/: __init__.py  apply_adapters.py  (+1 more)
specs/: apply-design.md  apply-requirements.md  apply-tasks.md  scan-design.md  scan-requirements.md  scan-tasks.md
src/music_metadata_lib/: __init__.py
src/music_metadata_tool/: __init__.py
steering/: product.md  project.yml  structure.ja.md  tech.ja.md
tests/: test_apply_adapters.py  test_apply_use_case.py  test_cli_apply.py  test_cli_common.py  test_cli_help.py  test_cli_logging.py  test_cli_scan.py  test_cli_stub_commands.py  test_cli_version.py  test_config.py  test_constants.py  test_scan_adapters.py  test_scan_use_case.py  test_version.py
tools/: csv_to_html.py  csv_to_user_spec_md.py  watch_and_test.py
(+14 files in other folders)
